manifest/jenkins/jenkins.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: infra
  labels:
    app.kubernetes.io/name: "jenkins"
    app.kubernetes.io/component: "jenkins-controller"
spec:
  serviceName: "jenkins"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "jenkins"
      app.kubernetes.io/component: "jenkins-controller"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "jenkins"
        app.kubernetes.io/component: "jenkins-controller"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - jenkins
      serviceAccountName: "jenkins"
      enableServiceLinks: false
      containers:
      - name: jenkins
        image: registry.cn-hangzhou.aliyuncs.com/kubeop/jenkins:2.516.1
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 1000
          runAsUser: 1000
        args: [ "--httpPort=8080"]
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 50000
          name: agent-listener
          protocol: TCP
        resources:
          limits:
            cpu: 8
            memory: 16Gi
          requests:
            cpu: 8
            memory: 16Gi
        startupProbe:
          failureThreshold: 12
          httpGet:
            path: '/login'
            port: http
          initialDelaySeconds: 40
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: '/login'
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: '/login'
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: jenkins-jcasc-config
          mountPath: /data/jenkins/casc_configs
        - name: admin-secret
          mountPath: /run/secrets/admin-username
          subPath: jenkins-admin-user
          readOnly: true
        - name: admin-secret
          mountPath: /run/secrets/admin-password
          subPath: jenkins-admin-password
          readOnly: true
        - name: tmp-volume
          mountPath: /tmp
        - name: jenkins-data
          mountPath: /data/jenkins
      - name: config-reload
        image: registry.cn-hangzhou.aliyuncs.com/devops-system/k8s-sidecar:1.30.7
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: jenkins-jcasc-config
          mountPath: /data/jenkins/casc_configs
        - name: jenkins-data
          mountPath: /data/jenkins
      volumes:
        - name: jenkins-jcasc-config
          emptyDir: {}
        - name: admin-secret
          secret:
            secretName: jenkins
        - name: tmp-volume
          emptyDir: {}
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins
