manifest/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: jenkins
  namespace: infra
  labels:
    app.kubernetes.io/name: "jenkins"
    app.kubernetes.io/component: "jenkins-controller"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.kubeop.com
    secretName: kubeop.com-ssl
  rules:
  - host: jenkins.kubeop.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: jenkins
              port:
                number: 8080
